--- a/small-spring-step-02/pom.xml
+++ b/small-spring-step-02/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>small-spring-step-01</artifactId>
+    <groupId>com.memoryFaded.springframework</groupId>
+    <artifactId>small-spring-step-02</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -22,6 +21,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -73,5 +73,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
